# unique-char-cli

./: README.md  pyproject.toml
src/unique_char/: __init__.py  collect_framework.py  constant.py  unique_char.py
tests/: test_framework.py  test_unique_char.py
