[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/unique_char"]
packages = ["src/unique_char"]

[project]
name = "unique_char_by_svjat"
version = "1.0.1"
authors = [
  { name="Svjatoslav Matvejev", email="svjatoslav.matvejev@gmail.com" },
]
description = "Counting unique characters in a string"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["char", "unique", "file", "cli", "command-line"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


